Updated the main page and added another recipe

--- a/recipes/spam-musubi.html
+++ b/recipes/spam-musubi.html
@@ -25,6 +25,7 @@
         <li>Nori</li>
         <li>Sushi Rice</li>
     </ul>
+    <h3>Steps</h3>
     <ol>
         <li>Slice the spam into 8-10 pieces and put in ziploc bag</li>
         <li>Mix oyster sauce, soy sauce, and sugar until sugar is dissolved 
